kubernetes-templating/frontend/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: shop.34.67.116.57.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
  tls:
  - secretName: shop.34.67.116.57.nip.io
    hosts: 
    - shop.34.67.116.57.nip.io
